--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
+    "react-router-dom": "^6.25.1",
     "tailwindcss": "^3.4.1"
   }
 }
