--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
     "@nextui-org/react": "^2.4.1",
+    "@reduxjs/toolkit": "^2.2.6",
     "@web3modal/ethers5": "4.0.5",
     "ethers": "^5.7.2",
     "moment": "^2.30.1",
@@ -24,7 +25,9 @@
     "react": "^18",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18",
+    "react-redux": "^9.1.2",
     "react-toastify": "^10.0.5",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
